Changes before error encountered
